--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build/
+
+secrets.json
 
 # Dependency directories
 node_modules
