--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "devour-client": "^1.4.1",
+    "moment": "^2.18.1",
     "promise": "^7.1.1",
     "simple-oauth2": "^1.0.3"
   },
